#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT(chapter3, 1.0, ashi08104@gmail.com)
AC_CONFIG_SRCDIR([e3_17_3.cpp])
AM_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE(chapter3,1.0)

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL

# Checks for library functions.

AC_OUTPUT([Makefile])
